--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -71,6 +71,19 @@
                         </form>
                    {% endif %}
                    <div>
+                       {% if metadata_status == 'Incomplete' %}
+                            <table class="table table-condensed" style="margin-top: 2px; border: 2px solid red">
+                                <tr style="color: red"><td><h4>Data for the following required elements are missing:</h4></td></tr>
+                                {% if not abstract %}
+                                    <tr><td>Abstract</td></tr>
+                                {% endif %}
+                                {% if not kywords %}
+                                    <tr><td>Keywords</td></tr>
+                                {% endif %}
+                            </table>
+                       {% endif %}
+                   </div>
+                   <div>
                     <h4><strong>Title:</strong></h4>
                     <hr style="border-color: dodgerblue; margin-top: 0px;margin-bottom: 2px">
                     {{ title }}
