[#111] added placeholder for the Title metadata field on resource creation page

--- a/hs_core/templates/pages/create-resource.html
+++ b/hs_core/templates/pages/create-resource.html
@@ -32,7 +32,7 @@
     <div class="form-group">
         <label for="" class="col-sm-2 control-label">Title</label>
         <div class="col-sm-10">
-          <input type="text" class="form-control" name="title" id="title" value="Untitled resource">
+          <input type="text" class="form-control" name="title" id="title" placeholder="Untitled resource">
         </div>
     </div>
     <h3>Add your files here:</h3>
