[#111] Label 'Citation' changed to 'How to cite' and editing texbox font size increased

--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -48,7 +48,7 @@
                 {%  else %}
                     <td class="text-success">{{ metadata_status }}</td></tr>
                 {%  endif %}
-            <tr><th>Citation</th><td>{{ citation }}</td></tr>
+            <tr><th>How to cite</th><td>{{ citation }}</td></tr>
         </table>
 
     </div>
