--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -44,9 +44,9 @@
             {% endif %}
             <tr><th>Metadata Status</th>
                 {%  if metadata_status == "Incomplete" %}
-                    <td class="text-danger">{{ metadata_status }}</td></tr>
+                    <td id="metadata-status" class="text-danger">{{ metadata_status }}</td></tr>
                 {%  else %}
-                    <td class="text-success">{{ metadata_status }}</td></tr>
+                    <td id="metadata-status" class="text-success">{{ metadata_status }}</td></tr>
                 {%  endif %}
             <tr><th>How to cite</th><td>{{ citation }}</td></tr>
         </table>
@@ -853,6 +853,23 @@
                                 $res_title.text(updated_title);
                             }
                         }
+
+                        if (json_response.hasOwnProperty('metadata_status')){
+                            if(json_response.metadata_status !== $('#metadata-status').text()){
+                                $('#metadata-status').text(json_response.metadata_status);
+                                if(json_response.metadata_status == "Complete")
+                                {
+                                    alert("Metadata Status:Complete");
+                                    $('#metadata-status').removeClass('text-danger');
+                                    $('#metadata-status').addClass('text-success')
+                                }
+                                else{
+                                    $('#metadata-status').removeClass('text-success');
+                                    $('#metadata-status').addClass('text-danger')
+                                }
+                            }
+                        }
+
                         $('#' + form_id).before($alert_success);
                         $('#' + form_id).closest('div').find('#error-alert').each(function(){
                             this.remove();
