--- a/hs_core/templates/pages/create-resource.html
+++ b/hs_core/templates/pages/create-resource.html
@@ -25,7 +25,7 @@
             <select class="form-control" name="resource-type" id="resource-type">
                 <option value="GenericResource">Generic Resource</option>
                 <option value="RasterResource">Geographic Raster Resource</option>
-{#                <option value="InstResource">RHESSys Instance Resource</option>#}
+                <option value="InstResource">RHESSys Instance Resource</option>
             </select>
         </div>
     </div>
