[#111] emails for creators and contributors are not displayed in resource view mode

--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -120,12 +120,12 @@
                                <div class="col-sm-8">{{ cr.organization }}</div>
                                </div>
                            {% endif %}
-                           {% if cr.email %}
-                               <div class="row">
-                                <div class="col-sm-4"><strong>Email:</strong></div>
-                                <div class="col-sm-8">{{ cr.email }}</div>
-                               </div>
-                           {% endif %}
+{#                           {% if cr.email %}#}
+{#                               <div class="row">#}
+{#                                <div class="col-sm-4"><strong>Email:</strong></div>#}
+{#                                <div class="col-sm-8">{{ cr.email }}</div>#}
+{#                               </div>#}
+{#                           {% endif %}#}
                            {% if cr.address %}
                                <div class="row">
                                 <div class="col-sm-4"><strong>Address:</strong></div>
@@ -168,12 +168,12 @@
                                <div class="col-sm-8">{{ cont.organization }}</div>
                                </div>
                            {% endif %}
-                           {% if cont.email %}
-                               <div class="row">
-                                <div class="col-sm-4"><strong>Email:</strong></div>
-                                <div class="col-sm-8">{{ cont.email }}</div>
-                               </div>
-                           {% endif %}
+{#                           {% if cont.email %}#}
+{#                               <div class="row">#}
+{#                                <div class="col-sm-4"><strong>Email:</strong></div>#}
+{#                                <div class="col-sm-8">{{ cont.email }}</div>#}
+{#                               </div>#}
+{#                           {% endif %}#}
                            {% if cont.address %}
                                <div class="row">
                                 <div class="col-sm-4"><strong>Address:</strong></div>
