[#111] url for the rights element is clickable in resource view mode

--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -324,7 +324,7 @@
                            {% if rights.url %}
                                <div class="row">
                                    <div class="col-sm-4"><strong>URL:</strong></div>
-                                   <div class="col-sm-8">{{ rights.url }}</div>
+                                   <div class="col-sm-8"><a href="{{ rights.url }}">{{ rights.url }}</a></div>
                                </div>
                            {% endif %}
                            <hr>
