--- a/hs_core/templates/pages/create-resource.html
+++ b/hs_core/templates/pages/create-resource.html
@@ -24,7 +24,7 @@
         <div class="col-sm-10">
             <select class="form-control" name="resource-type" id="resource-type">
                 <option value="GenericResource">Generic Resource</option>
-{#                <option value="RasterResource">Geographic Raster Resource</option>#}
+                <option value="TimeSeriesResource">Time Series Resource</option>
 {#                <option value="InstResource">RHESSys Instance Resource</option>#}
             </select>
         </div>
