[#106] removed quotes from Sign In in title

--- a/theme/templates/accounts/account_login.html
+++ b/theme/templates/accounts/account_login.html
@@ -1,6 +1,6 @@
 {% extends "accounts/account_form.html" %}
 {% load i18n future %}
-{% block title %}"Sign In"{% endblock %}
+{% block title %}Sign In{% endblock %}
 
 {% block main %}
 
